# klik-lang

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PROJECT_HEALTH.md  README.md  summary.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
cli/tests/: toolchain_integration.rs
compiler/: pipeline.rs
compiler/ast/: Cargo.toml
compiler/ast/src/: lib.rs  types.rs  visitor.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: lib.rs
compiler/incremental/: Cargo.toml
compiler/incremental/src/: lib.rs
compiler/ir/: Cargo.toml
compiler/ir/src/: lib.rs
compiler/ir/tests/: ir_tests.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: lib.rs  token.rs
compiler/lexer/tests/: lexer_tests.rs
compiler/opt/: Cargo.toml
compiler/opt/src/: lib.rs
compiler/optimizer/: Cargo.toml
compiler/optimizer/src/: lib.rs
compiler/optimizer/tests/: optimizer_tests.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: lib.rs
compiler/parser/tests/: ast_tests.rs
compiler/semantic/: Cargo.toml
compiler/semantic/src/: lib.rs
compiler/semantic/tests/: semantic_tests.rs
compiler/type_system/: Cargo.toml
compiler/type_system/src/: lib.rs
compiler/type_system/tests/: type_system_tests.rs
docs/: ARCHITECTURE.md  COMPILER_PIPELINE.md  LANGUAGE_GUIDE.md  LANGUAGE_SPEC.md  SOCIAL_LAUNCH_KIT.md  STDLIB_REFERENCE.md
examples/: async_tasks.klik  awesome_klik.klik  benchmark.klik  fibonacci.klik  generics.klik  hello.klik  pipeline_validation.klik  stress.klik  test_if.klik  test_pipe.klik  test_print.klik  testing.klik  types.klik
examples/advanced/: file_search.klik  game_of_life.klik  generics_patterns.klik  http_client.klik  json_parser.klik  markdown_renderer.klik  mini_database.klik  pipeline_showcase.klik  prime_calculator.klik  task_scheduler.klik  todo_app.klik  web_server.klik
formatter/: Cargo.toml
formatter/src/: lib.rs
linter/: Cargo.toml
linter/src/: lib.rs
lsp/: Cargo.toml
lsp/src/: lib.rs
package_manager/: Cargo.toml
package_manager/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: allocator.rs  concurrency.rs  error.rs  lib.rs
scripts/: e2e_test.sh
stdlib/: Cargo.toml
stdlib/src/: collections.rs  fs.rs  io.rs  lib.rs  math.rs  net.rs  strings.rs  time.rs
tests/: functions.klik  lexer_tests.rs  math.klik  strings.klik  variables.klik
