[package]
name = "klik-incremental"
version.workspace = true
edition.workspace = true

[dependencies]
klik-ast = { workspace = true }
klik-ir = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
walkdir = { workspace = true }
